--- a/styles.css
+++ b/styles.css
@@ -1,244 +1,196 @@
-body{
-  font-family: 'Roboto Slab', serif;
-  color: #00204a;
-  line-height: 1.6;
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-}
+<head>
+  <meta charset="utf-8">
+  <title>Technosoft Services</title>
 
-h1{
-  font-size: 5rem;
-}
+  <!-- bootstrap -->
 
-h2{
-  font-size: 3rem;
-}
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-h1, h2, h4{
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 900;
-  color: #005792;
+  <!-- GoogleFonts -->
 
-  line-height: 1.5;
-}
-
-.company{
-  background: #00bbf0;
-  padding: 5% 10% 1px;
-  text-align: center;
-}
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 
+  <!-- stylesheet -->
 
-#profile{
-  background: #00bbf0;
-  padding: 5% 15%;
-}
+  <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+
+  <div class="Header">
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#">
+        <img class="logo img-responsive" src="images/logo.jpg" alt="TechnoSoft Logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="#aboutUs">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#client">Client</a></li>
+          <li class="nav-item"><a class="nav-link" href="#career">Career</a></li>
+          <li class="nav-item"><a class="nav-link" href="#hr-services">H R Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#footer">Contact Us</a></li>
+        </ul>
+      </div>
 
 
+    </nav>
 
-/* Navigation Bar */
+  </div>
 
-.navbar{
-  padding: 5% 10% 0;
-}
-
-
-
-.nav-link{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-
-
-
-.Header{
-  background: #00bbf0;
-  padding: 3% 7%;
-}
-
-/* Wave Section */
-
-section{
-  position: relative;
-  width: 100%;
-  height: 20vh;
-  background: #00bbf0;
-  overflow: hidden;
-}
-
-section .wave{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url(wave.png);
-  background-size: 1000px 100px;
-}
-
-section .wave.wave1{
-  animation: animate 30s linear infinite;
-  z-index: 1000;
-  opacity: 1;
-  animation-delay: 0s;
-  bottom: 0;
-}
-
-section .wave.wave2{
-  animation: animate2 15s linear infinite;
-  z-index: 999;
-  opacity: 0.5;
-  animation-delay: -5s;
-  bottom: 10px;
-}
-
-section .wave.wave3{
-  animation: animate 30s linear infinite;
-  z-index: 998;
-  opacity: 0.2;
-  animation-delay: -2s;
-  bottom: 15px;
-}
-
-section .wave.wave4{
-  animation: animate2 15s linear infinite;
-  z-index: 997;
-  opacity: 0.7;
-  animation-delay: -5s;
-  bottom: 20px;
-}
-
-@keyframes animate {
-  0%{
-    background-position-x: 0;
-  }
-  100%{
-    background-position-x: 1000px;
-  }
-}
-
-@keyframes animate2 {
-  0%{
-    background-position-x: 0;
-  }
-  100%{
-    background-position-x: -1000px;
-  }
-}
+  <div class="company">
+    <h1>TechnoSoft Services</h1>
+  </div>
 
 
 
-#aboutUs{
-  background: #fff;
-  padding: 2% 15% 5%;
-}
+  <div id="profile">
 
-#client{
-  padding: 5% 15%;
-  background: #d9faff;
-  text-align: center;
-}
+    <h2>Company Profile</h2><br>
+    <p>TechnoSoft Services, is an ISO 9001-2008 certified company, a visionary organization, offering IT consulting services since 1998, has carried out the pioneering work, at time IT was in its nascent stage, by deploying the computer technology to
+      several industries.
 
-.logo-section{
-  padding: 5% 25%;
-}
+      Turn key computerization projects and enterprise wide software solutions implementation amounting to nearly 1000 man years of work done, TechnoSoft Services is well poised to offer specialized software solutions and system administration
+      services to its clients.
 
-.col-md-4{
-  padding: 3%;
-}
+      Competence built in through training and development of its human resources over two decades, has enabled TechnoSoft Services to offer e-learning solutions and Learning Management Systems.
 
-#career{
-  padding: 5% 15%;
-}
+      The critical gap between specific skills needed and in house resources is filled by TechnoSoft Services through its staff augmentation along with lateral hiring services and human resource consulting.</p><br><br>
 
-#hr-services{
-  background: #d9faff;
-  padding: 5% 15%;
-}
+    <h4>Business Value</h4><br>
+    <ul>
+      <li><p>IT enabled achievement of strategic objectives</p></li>
+      <li><p>Speedier time to market</p></li>
+      <li><p>Improvements in cost and energy efficiency</p></li>
+      <li><p>Increased productivity</p></li>
+    </ul>
 
-#footer{
-  background: #00bbf0;
-  padding: 3% 7%;
-  text-align: center;
-}
 
-@media (max-width: 1199px){
-
-  h1{
-    font-size: 6rem;
-  }
-
-  h2{
-    font-size: 5rem;
-  }
-
-  h4{
-    font-size: 4rem;
-  }
-
-  p{
-    font-size: 2rem;
-  }
+  </div>
+  <section>
+    <div class="wave wave1"></div>
+    <div class="wave wave2"></div>
+    <div class="wave wave3"></div>
+    <div class="wave wave4"></div>
+  </section>
 
 
 
-  .navbar{
-    padding: 0;
-  }
-
-  .navbar-toggler-icon{
-    width: 5rem;
-    height: 5rem;
-  }
-
-  img.logo{
-    width: 140%;
-  }
-
-  .nav-link{
-    font-size: 4rem;
-  }
 
 
-
-  .Header{
-    padding: 0;
-  }
-
-  .company{
-    padding: 5% 1%;
-  }
-
-  #profile{
-    padding: 4% 4%;
-    text-align: justify;
-  }
-
-  #aboutUs{
-    padding: 4% 4%;
-    text-align: justify;
-  }
-
-  #client{
-    padding: 4% 4%;
-    text-align: center;
-  }
-
-  #career{
-    padding: 4% 4%;
-    text-align: justify;
-  }
-
-  #hr-services{
-    padding: 4% 4%;
-    text-align: justify;
-  }
-
-  #footer{
-    padding: 4% 4%;
-    text-align: justify;
-  }
+  <div id="aboutUs">
+    <h2>About Us</h2><br><br>
+    <h4>History</h4><br>
+    <p>The company was formed in the year 1998 catering to the IT manpower needs of Tata Iron And Steel Company in Jamshedpur. With a humble beginning of just a handful of people the company has grown into one of the prominent manpower facility
+      providers to the Tata steel company in the last 11 odd years. We strongly believe that it all happened due to the sheer hard work of all our employees who exceeded all expectations of the customers and earned us the rapport that we have with
+      the company today.</p><br><br>
+    <h4>Strength</h4><br>
+    <p>The strength of the company lies in the team work of 120 employees. We have ensured inculcation of values that promote collective efforts and strongly promote creativity at all levels. Strong belief that team work works the best gave us an
+      opportunity to create this wonderful team which at all given time works in unison to enhance the value of the company.</p><br><br>
+    <h4>Vision</h4><br>
+    <p>It is our dream to be a strong 500 employee company by the year 2015 providing manpower and solutions to at least 5 large corporations.</p><br><br>
+    <h4>Guiding Philosophy</h4><br>
+    <p>Create Value for our customers in everything that you do. This is what we inculcate in the heart of each employee to ensure single minded focus on our goal..</p>
+  </div><br><br>
 
 
-}
+  <div id="client"><br><br>
+    <h2>Our Clients</h2>
+
+    <div class="logo-section">
+      <div class="row">
+        <img class="col-md-12" src="images/tatasteel_logo.jpg" alt="">
+        <img class="col-md-12" src="images/hp-logo.jpg" alt="">
+        <img class="col-md-12" src="images/jusco-logo.jpg" alt="">
+        <img class="col-md-12" src="images/ge-logo.jpg" alt="">
+        <img class="col-md-12" src="images/e-trans.jpg" alt="">
+        <img class="col-md-12" src="images/tatapower-logo.jpg" alt="">
+      </div>
+    </div><br><br>
+
+  </div>
+
+  <div id="career">
+    <br><br>
+    <h2>Career with Us</h2><br><br>
+
+    <p>At TechnoSoft Services, we believe, there is life beyond work. We respect your personal life and set the achievable goals and encourage employees to live balanced life, where family too matters.
+
+      We create productive work culture, which does not clash with other aspects of life. This is achieved through understanding their personal aspirations, goals, conveniences and life style.
+
+      Whether you are looking for more responsibility, growth and matching reward, or going through the personal phase in life and constrained to take up leadership position, Sellcraft understands. Your contribution does not go unnoticed ever.
+
+      Join us and make a difference, not just to the world of IT but your own career!</p><br><br>
+
+  </div>
+
+  <div id="hr-services">
+    <br><br> <h2>HR Services</h2><br><br>
+    <p>
+      In today’s pace-setting executives understand the importance of giving their company a competitive advantage through stellar HR processes and services. With Technosoft Services, companies outsource their core HR processes and enjoy a
+      comprehensive set of services typically reserved for larger organizations.</p><br>
+    <p>These end-to-end services include:</p>
+
+    <ul>
+      <li><p><a href="https://www.trinet.com/hr-services/payroll">Payroll: </a>Complete payroll services and tax administration in all 50 states</p></li>
+      <li><p><a href="https://www.trinet.com/services/core/benefits.htm">Benefits: </a>Comprehensive employee benefits packages</p></li>
+      <li><p><a href="https://www.trinet.com/services/core/risk.htm">Risk & Compliance: </a>Crucial assistance with employer-related risk and compliance</p></li>
+      <li><p><a href="https://www.trinet.com/hr-services">HR Team: </a>A dedicated team delivering best practices guidance and expertise</p></li>
+    </ul>
+
+    <br><br>
+
+    <h4>HR Team :</h4><br>
+    <p><b>The Industry Standard for Expert HR Support</b>
+
+      Technosoft provides all clients with a dedicated service team to complement and enhance HR and benefits administration. The team includes relationship managers, specialists, and experts who address key questions and provide valuable guidance
+      across all HR issues. Technosoft’s service teams are a distinct advantage for clients because they deliver flexible and reliable ad hoc support as well as thorough and precise expertise. Clients not only receive seamless HR and benefits
+      administration but also the extra attention and critical, timely information essential to navigate successfully through the complexities of HR.</p><br>
+
+    <p><b>Technosoft’s HR Teams Ensure:</b><br>
+    <ul>
+      <li><p>Direct support from a Technosoft specialist for all your employees so they receive appropriate attention when they need it</p></li>
+      <li><p>Day-to-day support for benefit and payroll issues</p></li>
+      <li><p>Rapid resolution to common HR challenges</p></li>
+      <li><p>Best practices guidance and expertise to address complex issues such as compliance, pre-employment screening, termination procedures, safety plans, and employee record management.</p></li>
+    </ul><br><br>
+    </p>
+
+  </div>
+
+  <div id="footer">
+    <h2>Technosoft Services</h2>
+    <p>68,Pennar Road, <br>
+      Sakchi, Jamshedpur, <br>
+      Jharkhand, India, <br>
+      Pin Code : 831001 <br><br>
+
+      <b>Contact No.</b> : 0657-2441053 <br><br>
+
+      <b>Email</b> :<br>
+      technosoftservices@rediffmail.com <br>
+      hr@technosoftservices.in <br>
+      info@technosoftservices.in <br>
+      lokesh@technosoftservices.in <br><br>
+
+
+      <b>Website </b>: www.technosoftservices.in</p>
+
+  </div>
+
+
+</body>
+
+</html>
